# patchsmith

./: .gitignore  CLAUDE.md  CLI_GUIDE.md  DISTRIBUTION_READY.md  INSTALL.md  LICENSE  PRODUCT.md  README.md  pyproject.toml  test_live_progress_logging.py  test_thinking_display.py
documentation/: codeql-modern-api-fix.md  custom-queries-progress-fix.md  integration_test_learnings.md  language-detection-caching.md  ql-pack-solution.md  tasks.md  typescript-fix.md
specs/1_initial_version/: design.md  requirements.md  tasks.md
src/patchsmith/: __init__.py  __main__.py
src/patchsmith/adapters/claude/: __init__.py  agent.py  autonomous_fix_agent.py  custom_query_generator_agent.py  detailed_security_analysis_agent.py  false_positive_filter_agent.py  fix_generator_agent.py  language_detection_agent.py  query_generator_agent.py  report_generator_agent.py  triage_agent.py  vulnerability_brainstorm_agent.py
src/patchsmith/adapters/codeql/: cli.py  parsers.py
src/patchsmith/adapters/git/: __init__.py  pr.py  repository.py
src/patchsmith/cli/: main.py  progress.py
src/patchsmith/cli/commands/: __init__.py  analyze.py  clean.py  completion.py  finetune.py  fix.py  init.py  investigate.py  list.py  report.py
src/patchsmith/core/: config.py  user_config.py
src/patchsmith/models/: analysis.py  config.py  finding.py  project.py  query.py  report.py
src/patchsmith/presentation/formatters/: __init__.py  base.py  cve.py  markdown.py  report_base.py  report_html.py  report_markdown.py
src/patchsmith/repositories/: project_repository.py
src/patchsmith/services/: analysis_service.py  base_service.py  fix_service.py  query_finetune_service.py  report_service.py
src/patchsmith/utils/: audit.py  logging.py
tests/: MANUAL_TESTING.md  manual_test_base_agent.py  manual_test_codeql.py  manual_test_sarif_parser.py  manual_test_service_layer.py  manual_test_system_prompt.py
tests/fixtures/: sample_codeql_output.sarif  test_query.ql
tests/integration/: README.md  test_e2e_workflow.py  test_service_layer_e2e.py
tests/unit/: test_config_hierarchy.py
tests/unit/adapters/: test_claude_agent.py  test_codeql_cli.py  test_codeql_parsers.py  test_custom_query_generator_agent.py  test_false_positive_filter_agent.py  test_fix_generator_agent.py  test_git_repository.py  test_language_detection_agent.py  test_pr_creator.py  test_query_generator_agent.py  test_report_generator_agent.py
tests/unit/models/: test_analysis.py  test_config.py  test_finding.py  test_project.py  test_query.py
tests/unit/presentation/formatters/: test_cve_formatter.py  test_markdown_formatter.py
tests/unit/services/: test_analysis_service.py  test_base_service.py  test_fix_service.py  test_report_service.py
